--- a/style.css
+++ b/style.css
@@ -35,15 +35,42 @@ nav p{
     text-transform: uppercase;
     cursor: pointer;
     transition: cubic-bezier(0.19, 1, 0.22, 1) 1s;
+    user-select: none;
 }
-nav p:hover {
-    font-size: 24px;
-}
+
 nav p span{
     font-weight: 900;
 }
 
+.menu{
+    position: absolute;
+    left:50%;
+    transform:translate(-50%);
+    width: 20%;
+    height: 0%;
+    background-color: rgb(0, 0, 0);
+    transition: 0.3s;
+}
+.menu .one{
+    
+    display: none;
+    list-style: none;
+    text-align: center;
+    transition: 1s;
+}
+.menu ul li{
+    font-weight: bold;
+    text-transform: uppercase;
+    display:block;
+    padding: 8px;
+    transition: 1s;
 
+}
+
+.menu a{
+    text-decoration: none;
+    color:white;
+}
 
 main{
     width: 100%;
@@ -155,6 +182,10 @@ main{
         top: 60%;
         transform: translate(-91%,-40%);
     }  
+    .menu{
+        width: 60%;
+        font-size: 12px;
+    }
     .text{
         
         top: 75%;
@@ -190,6 +221,17 @@ main{
     }
     nav{
         height: 10%;
+    }
+    .menu{
+        width: 30%;
+        font-size: 16px;
+        
+    }
+    .menu ul li{
+        
+        padding: 15px;
+        transition: 1s;
+    
     }
     main{
         height: 90%;
@@ -240,6 +282,17 @@ main{
     main{
         height: 90%;
     }
+    .menu{
+        width: 35%;
+        font-size: 22px;
+        
+    }
+    .menu ul li{
+        
+        padding: 20px;
+        transition: 1s;
+    
+    }
     .social{
         display: none;
     }
@@ -273,5 +326,10 @@ main{
         border: 1px solid white;
         
         
+    }
+}
+@media only screen and (min-width:1920px) {
+    .menu ul li{
+        padding: 16px;
     }
 }
